--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,3 +43,9 @@ services:
         - ../:/application
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8/fpm/conf.d/99-overrides.ini
 
+    phpspec:
+      build: phpspec:2.2.1
+      container_name: phpeak-phpspec
+      working_dir: /application
+      volumes:
+        - ../:/application
