--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     mysql:
       image: mysql:8.0
       container_name: phpeak-mysql
-      working_dir: /application
+      working_dir: /phpeak
       volumes:
         - .:/application
       environment:
@@ -28,7 +28,7 @@ services:
     webserver:
       image: nginx:alpine
       container_name: phpeak-webserver
-      working_dir: /application
+      working_dir: /phpeak
       volumes:
           - ../:/application
           - ./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -38,14 +38,7 @@ services:
     php-fpm:
       build: phpdocker/php-fpm
       container_name: phpeak-php-fpm
-      working_dir: /application
+      working_dir: /phpeak
       volumes:
         - ../:/application
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8/fpm/conf.d/99-overrides.ini
-
-    phpspec:
-      build: phpspec:2.2.1
-      container_name: phpeak-phpspec
-      working_dir: /application
-      volumes:
-        - ../:/application
