--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     webserver:
       image: nginx:alpine
       container_name: phpeak-webserver
-      working_dir: /phpeak
+      working_dir: /application
       volumes:
           - ../:/application
           - ./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -38,7 +38,8 @@ services:
     php-fpm:
       build: phpdocker/php-fpm
       container_name: phpeak-php-fpm
-      working_dir: /phpeak
+      working_dir: /application
       volumes:
         - ../:/application
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8/fpm/conf.d/99-overrides.ini
+
