--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,5 +41,5 @@ services:
       working_dir: /application
       volumes:
         - ../:/application
-        - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8/fpm/conf.d/99-overrides.ini
+        - ./phpdocker/php-fpm/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
 
